fix: video in experience section - video controls visible, pop to fullscreen, proportions wrong

--- a/scss/experience.module.scss
+++ b/scss/experience.module.scss
@@ -56,17 +56,21 @@
   }
 
   .imageContainer {
-    &:nth-of-type(1) {
-      height: 66.66%;
+    @include from-small-up {
+      &:nth-of-type(1) {
+        height: 66.66%;
+      }
+      &:nth-of-type(2) {
+        height: 33.33%;
+      }
     }
-    &:nth-of-type(2) {
-      height: 33.33%;
-    }
+
     .stretchyContainer {
       //   padding-bottom: 66.66%;
       width: 100%;
       height: 100%;
       position: relative;
+      pointer-events: none;
 
       img,
       video {
@@ -75,7 +79,14 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
+        pointer-events: none;
+        &::-webkit-media-controls-enclosure {
+          display: none;
+        }
       }
+      // video::-webkit-media-controls-enclosure {
+      //   display: none;
+      // }
     }
   }
   &:nth-child(even) {
